<resources>
    <string name="app_name">DrinkWaterReminder</string>

    <!--Home Screen-->
    <string name="home_50_ml">50 ml</string>
    <string name="home_100_ml">100 ml</string>
    <string name="home_150_ml">150 ml</string>
    <string name="home_200_ml">200 ml</string>
    <string name="home_end_time">End Time</string>
    <string name="home_start_time">Start Time</string>
    <string name="home_remind_me_in_between">Remind me in Between</string>

    <!--Bottom Nav Titles-->
    <string name="mi_home">Home</string>
    <string name="mi_info">Info</string>
    <string name="mi_history">History</string>
    <string name="mi_settings">Settings</string>

    <!--Settings Screen-->
    <string name="settings_name">Name</string>
    <string name="settings_save">Save</string>
    <string name="settings_male">Male</string>
    <string name="settings_dark">Dark</string>
    <string name="settings_light">Light</string>
    <string name="settings_female">Female</string>
    <string name="settings_wakeup">Wakeup</string>
    <string name="settings_bedtime">Bedtime</string>
    <string name="settings_weight">Weight(kg)</string>
    <string name="settings_height">Height(cm)</string>
    <string name="settings_dob">Date of birth</string>
    <string name="settings_app_theme">App Theme</string>
    <string name="settings_about_you">About you</string>
    <string name="settings_get_in_bed">Get in bed</string>
    <string name="settings_select_date">Select date</string>
    <string name="settings_device_theme">Device theme</string>

    // Common in whole app
    <string name="placeholder_percentage">%.2f%%</string>
    <string name="time_format_hh_colon_mm">%1$s : %2$s</string>
</resources>