<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_about_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_you"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/il_divider_about_you"
                layout="@layout/layout_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_about_you" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_5"
                android:hint="@string/settings_name"
                app:layout_constraintEnd_toStartOf="@+id/gl_center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/il_divider_about_you">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_5"
                android:hint="@string/settings_dob"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/il_divider_about_you">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etv_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_5"
                android:hint="@string/settings_weight"
                app:layout_constraintEnd_toStartOf="@+id/gl_center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="3"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:hint="@string/settings_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_center_vertical"
                app:layout_constraintTop_toTopOf="@+id/til_weight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="3"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_weight">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:layout_weight="0.5"
                    android:background="@drawable/rb_gender_bg_selector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:paddingStart="@dimen/dp_15"
                    android:paddingEnd="0dp"
                    android:text="@string/settings_male"
                    android:textColor="@android:color/black" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_weight="0.5"
                    android:background="@drawable/rb_gender_bg_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingStart="@dimen/dp_15"
                    android:paddingEnd="0dp"
                    android:text="@string/settings_female"
                    android:textColor="@android:color/black" />
            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_bedtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/settings_bedtime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg_gender" />

            <include
                android:id="@+id/il_divider_bedtime"
                layout="@layout/layout_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bedtime" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_get_in_bed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_5"
                android:hint="@string/settings_get_in_bed"
                app:layout_constraintEnd_toStartOf="@+id/gl_center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/il_divider_bedtime">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etv_get_in_bed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_wake_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_5"
                android:hint="@string/settings_wakeup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/il_divider_bedtime">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etv_wake_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_app_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/settings_app_theme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_get_in_bed" />

            <include
                android:id="@+id/il_divider_app_theme"
                layout="@layout/layout_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_app_theme" />

            <RadioGroup
                android:id="@+id/rg_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/il_divider_app_theme">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_device_theme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:layout_weight="0.33"
                    android:background="@drawable/rb_gender_bg_selector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/settings_device_theme"
                    android:textColor="@android:color/black" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_dark_theme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:layout_weight="0.33"
                    android:background="@drawable/rb_gender_bg_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/settings_dark"
                    android:textColor="@android:color/black" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_light_theme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_weight="0.33"
                    android:background="@drawable/rb_gender_bg_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/settings_light"
                    android:textColor="@android:color/black" />
            </RadioGroup>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_save"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>