<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_water_drank_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@android:style/TextAppearance.Material.Display4"
                android:textSize="@dimen/sp_100"
                app:layout_constraintBottom_toTopOf="@+id/gl_top_30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="50.72%" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_total_water_drank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:textAppearance="@android:style/TextAppearance.Material.Display2"
                app:layout_constraintEnd_toStartOf="@+id/tv_forward_slash"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gl_top_30"
                tools:text="1050" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_forward_slash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_10"
                android:text="/"
                android:textAppearance="@android:style/TextAppearance.Material.Display2"
                app:layout_constraintBottom_toBottomOf="@+id/tv_total_water_drank"
                app:layout_constraintEnd_toStartOf="@+id/tv_total_water_drink_target"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/tv_total_water_drank"
                app:layout_constraintTop_toTopOf="@+id/tv_total_water_drank"
                tools:text="/" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_total_water_drink_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Display2"
                app:layout_constraintBottom_toBottomOf="@+id/tv_total_water_drank"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/tv_forward_slash"
                app:layout_constraintTop_toTopOf="@+id/tv_total_water_drank"
                tools:text="2070" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_last_water_drink_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center"
                android:text="Last Activity: 150ml at 02:07 pm today!"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_water_drank"
                tools:text="Last Activity: 150ml at 02:07 pm today!" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_50_ml"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_5"
                android:text="@string/home_50_ml"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintEnd_toStartOf="@+id/btn_100_ml"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_last_water_drink_info" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_100_ml"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:text="@string/home_100_ml"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintBottom_toBottomOf="@+id/btn_50_ml"
                app:layout_constraintEnd_toStartOf="@+id/btn_150_ml"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/btn_50_ml"
                app:layout_constraintTop_toTopOf="@+id/btn_50_ml" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_150_ml"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:text="@string/home_150_ml"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintBottom_toBottomOf="@+id/btn_50_ml"
                app:layout_constraintEnd_toStartOf="@+id/btn_200_ml"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/btn_100_ml"
                app:layout_constraintTop_toTopOf="@+id/btn_50_ml" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_200_ml"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home_200_ml"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintBottom_toBottomOf="@+id/btn_50_ml"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/btn_150_ml"
                app:layout_constraintTop_toTopOf="@+id/btn_50_ml" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/home_remind_me_in_between"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_50_ml" />

            <include
                android:id="@+id/il_divider_reminder"
                layout="@layout/layout_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_reminder" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_start_reminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_5"
                android:hint="@string/home_start_time"
                app:layout_constraintEnd_toStartOf="@+id/gl_center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/il_divider_reminder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etv_start_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_end_reminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_15"
                android:hint="@string/home_end_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/il_divider_reminder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etv_end_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:contentDescription="@null"
                android:src="@drawable/ic_add"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_top_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>